alignment fix .sub-section

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ footer .footer-top .link-section .sub-section {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-end;
+    align-items: flex-start;
     gap: 1rem;
     width: 7.4rem;
     height: 100%;
